# corparius

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements-secrets.txt  requirements-test.txt  requirements.txt  start-linux.sh  start-macos.command  start-windows.bat  start.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  plugins-validate.yml  release.yml
app/: __init__.py  agents.py  backup.py  cfg.py  claudecli.py  cli.py  company.py  config.py  deliverability.py  deploy.py  doctor.py  enrich.py  hitl.py  i18n.py  integrations.py  leadsource.py  llm.py  mailbox.py  mcp_server.py  models.py  ollama_setup.py  orchestrator.py  paths.py  plugincli.py  plugins.py  provider_check.py  safety.py  secretbox.py  settings_spec.py  signals.py  sitegen.py  store.py  structured.py  tools.py  update_check.py  webui.html  webui.py
companies/example/: company.yaml  leads.csv
corparius/: agents.py  backup.py  cfg.py  claudecli.py  cli.py  config.py  deploy.py  doctor.py  hitl.py  i18n.py  leadsource.py  llm.py  mailbox.py  mcp_server.py  orchestrator.py  paths.py  plugins.py  provider_check.py  safety.py  secretbox.py  settings_spec.py  signals.py  sitegen.py  store.py  structured.py  tools.py  update_check.py  webui.html  webui.py
docs/: architecture.md  backlog.md  conformite-fr.md  console.md  deploiement.md  install.md  integrations.md  leads.md  lean.md  llm-providers.md  mcp.md  pipeline.md  plugins.md  roadmap-90j.md  securite.md  site.md
docs/reverse-engineering/: comparatif.md  nanocorp.md  polsia.md  uclic-acquisition.md
packaging/: README.md  corparius.spec  launcher.py  validate_registry.py
packaging/homebrew/: corparius.rb
packaging/plugin-template/: README.md  corparius_plugin.json  pyproject.toml  test_plugin.py
packaging/plugin-template/corparius_plugin_example/: __init__.py
packaging/scoop/: corparius.json
packaging/winget/: MariusYvard.corparius.installer.yaml  MariusYvard.corparius.locale.en-US.yaml  MariusYvard.corparius.yaml
plugins/: registry.json
tests/: conftest.py  test_agents.py  test_backup.py  test_ceo_acts.py  test_cfg.py  test_claudecli.py  test_cli.py  test_company_api.py  test_deliverability.py  test_deploy.py  test_design_agent.py  test_doctor.py  test_enrich.py  test_hitl.py  test_integrations.py  test_leadsource.py  test_lean.py  test_llm_setup.py  test_mailbox.py  test_mcp_server.py  test_memory.py  test_migrations.py  test_orchestrator.py  test_outreach.py  test_paths.py  test_plugincli.py  test_plugins.py  test_provider_onboarding.py  test_router.py  test_safety.py  test_secretbox.py  test_settings_api.py  test_signals.py  test_sitegen.py  test_store_concurrency.py  test_structured.py  test_tasks.py  test_tools.py  test_update_check.py  test_webui.py  (+2 more)
