# Tool configuration only, on purpose.
#
# There is no [project] or [build-system] table here, so this file does not make
# corparius pip-installable. Making it installable means renaming app/ to
# corparius/: the importable package is currently `app`, and `pip install .`
# would drop a top-level `app` module into site-packages, where it is close to
# guaranteed to collide with something else. That rename touches every test, the
# PyInstaller spec, the four launchers and every doc that says `python -m
# app.cli`, so it belongs in its own change rather than tangled up with the
# tooling it would otherwise block.

[tool.pytest.ini_options]
# tests/ only. A bare `pytest` from the root used to also collect
# packaging/plugin-template/test_plugin.py, which registers an example provider
# into llm.OPENAI_COMPAT_PROVIDERS and deploy.REGISTRY - module-level registries
# every other test shares. It is still run in CI, in its own process, so the
# template stays validated without leaking state into the suite.
testpaths = ["tests"]
# -ra surfaces skips and xfails in the summary: a test that quietly stopped
# running is worse than one that fails.
addopts = "-ra --strict-markers --strict-config"
# Every warning is a failure, ResourceWarning included. The matrix spans 3.10 to
# 3.14, so this turns "removed in the next Python" into a red leg today; and the
# close_stores fixture in conftest.py plus Path.read_text in the site tests mean
# a leaked sqlite handle or file now fails here rather than only breaking
# tmp_path cleanup on Windows.
filterwarnings = ["error"]

[tool.ruff]
line-length = 100          # matches the existing hand-wrapped style
target-version = "py310"   # the oldest interpreter CI builds against

[tool.ruff.lint]
# Deliberately not "I" (import sorting). The modules here group their imports by
# meaning - stdlib, then `from . import ...` siblings, then named symbols - and
# isort would reflow 52 sites into alphabetical order across the whole codebase.
# That is a large mechanical diff over a layout that was chosen, to satisfy a
# rule nobody asked for. Turn it on with a dedicated commit if ever.
select = ["E", "F", "W", "UP", "B"]
ignore = [
    # The codebase wraps explanatory comments by hand and several exceed the
    # limit by a word or two. Reflowing authored prose to satisfy a linter is a
    # worse trade than the warning.
    "E501",
    # `p = lambda en, fr: i18n.pick(lang, en, fr)` is the localisation idiom in
    # nine modules. A def would be three lines to say the same thing, and the
    # point of the alias is that it stays visually out of the way.
    "E731",
]

[tool.ruff.lint.per-file-ignores]
# start.py is the bootstrap: it runs under whatever Python the operator has,
# which is the entire reason it checks for 3.10 first. ruff evaluates that
# check against target-version and calls it dead code - true for the package,
# false for the one file that has to run before the package does.
"start.py" = ["UP036"]
# Paired clear/update on one line, so the restore of each registry reads as the
# single operation it is. Splitting them would obscure the pairing.
"tests/test_plugins.py" = ["E702"]
"tests/test_llm_setup.py" = ["E701"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Deliberately not --strict. The annotations here have never been checked, so a
# strict pass reports hundreds of errors at once and gets switched off. The
# per-module list below is the ratchet: clean leaves first, widen over time.
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true

# The ratchet. CI runs mypy over exactly these modules (see ci.yml), so the gate
# is green today and widening it is a deliberate act rather than a bulk cleanup
# nobody has time for. `mypy app/` reports 9 more findings across llm, mailbox,
# plugins, store, tools and webui - all annotation gaps rather than defects
# (int(body.get("id")) inside a try/except TypeError, cur.lastrowid typed
# int | None) - which is why they are worth fixing one module at a time instead
# of silencing in bulk.
[[tool.mypy.overrides]]
module = ["app.models", "app.paths", "app.settings_spec"]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/mcp_server.py"]   # optional extra, needs the mcp package

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
